No Tocar Version 4

--- a/ProyectoDAS/Views/Categoria/Eliminar.cshtml
+++ b/ProyectoDAS/Views/Categoria/Eliminar.cshtml
@@ -24,7 +24,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group row mt-4 text-end">
-                <h2 class="pl-4" style="color: #003399;">Editar Categoría </h2>
+                <h2 class="pl-4" style="color: #003399;">Eliminar Categoría </h2>
             </div>
 
             <div class="container">
