--- a/ProyectoDAS/Views/Clientes/Eliminar.cshtml
+++ b/ProyectoDAS/Views/Clientes/Eliminar.cshtml
@@ -23,7 +23,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group row mt-4 text-end">
-                <h2 class="pl-4" style="color: #003399;">Esta seguro de eliminar el cliente? </h2>
+                <h2 class="pl-4" style="color: #003399;">Eliminar Cliente</h2>
             </div>
 
             <div class="container">
