--- a/ProyectoDAS/Views/Tiendas/Index.cshtml
+++ b/ProyectoDAS/Views/Tiendas/Index.cshtml
@@ -88,7 +88,7 @@
         <div class="contenido-tienda">
             <h5>Av. Vargas Machuca 340</h5>
             <p>VMachuca - SJM MS</p>
-            <span class="ir-icono">➡️</span>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modalVargasMachuca">➡️</span>
         </div>
     </div>
 
@@ -98,7 +98,7 @@
         <div class="contenido-tienda">
             <h5>Jr. Justo Naveda 1190</h5>
             <p>La Cabaña - SJM MS</p>
-            <span class="ir-icono">➡️</span>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modalJustoNaveda">➡️</span>
         </div>
     </div>
 
@@ -108,65 +108,203 @@
         <div class="contenido-tienda">
             <h5>Jr. Las Gaviotas</h5>
             <p>Villa El Contador - Surco Viejo</p>
-            <span class="ir-icono">➡️</span>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modalLasGaviotas">➡️</span>
         </div>
     </div>
-    <!-- Tarjeta 4 - NUEVA -->
+
+    <!-- Tarjeta 4 -->
     <div class="tarjeta-tienda">
         <img src="~/images/tienda4.jpg" alt="Guardia Civil">
         <div class="contenido-tienda">
             <h5>Jr. Guardia Civil Norte</h5>
-            <p>V. Alegre (Cruce con Vista Alegre) - SC MS</p>
-            <span class="ir-icono">➡️</span>
+            <p>V. Alegre - SC MS</p>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modalGuardiaCivil">➡️</span>
         </div>
     </div>
 
-    <!-- Tarjeta 5 - NUEVA -->
+    <!-- Tarjeta 5 -->
     <div class="tarjeta-tienda">
         <img src="~/images/tienda5.jpg" alt="13 de Octubre">
         <div class="contenido-tienda">
             <h5>PJ. 13 de Octubre</h5>
-            <p>Al costado del Mdo. Santa Rosa - Canevaro SJM MS</p>
-            <span class="ir-icono">➡️</span>
+            <p>Canevaro SJM MS</p>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modal13Octubre">➡️</span>
         </div>
     </div>
 
-    <!-- Tarjeta 6 - NUEVA -->
+    <!-- Tarjeta 6 -->
     <div class="tarjeta-tienda">
         <img src="~/images/tienda6.jpg" alt="Valle Sharon">
         <div class="contenido-tienda">
             <h5>Av. Prol. César Canevaro</h5>
-            <p>Cerca al Mdo. Valle Sharon - Crédito SJM MS</p>
-            <span class="ir-icono">➡️</span>
+            <p>Valle Sharon - Crédito SJM MS</p>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modalCesarCanevaro">➡️</span>
         </div>
     </div>
-    <!-- Tarjeta 7 - NUEVA -->
+
+    <!-- Tarjeta 7 -->
     <div class="tarjeta-tienda">
         <img src="~/images/tienda7.jpg" alt="Panamericana Sur">
         <div class="contenido-tienda">
             <h5>Av. Antigua Panamericana Sur</h5>
-            <p>Alt. Cruce con Lurín – Pachacamac LU MS</p>
-            <span class="ir-icono">➡️</span>
+            <p>Lurín – Pachacamac LU MS</p>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modalPanamericanaSur">➡️</span>
         </div>
     </div>
 
-    <!-- Tarjeta 8 - NUEVA -->
+    <!-- Tarjeta 8 -->
     <div class="tarjeta-tienda">
         <img src="~/images/tienda8.jpg" alt="Los Próceres">
         <div class="contenido-tienda">
             <h5>Av. Los Próceres</h5>
-            <p>Frente a Tottus – Próceres SC MS</p>
-            <span class="ir-icono">➡️</span>
+            <p>Próceres SC MS</p>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modalLosProceres">➡️</span>
         </div>
     </div>
 
-    <!-- Tarjeta 9 - NUEVA -->
+    <!-- Tarjeta 9 -->
     <div class="tarjeta-tienda">
         <img src="~/images/tienda9.jpg" alt="San Martín">
         <div class="contenido-tienda">
             <h5>Av. San Martín</h5>
-            <p>Frente al C.C. San Pedro – SPedro CLL MS</p>
-            <span class="ir-icono">➡️</span>
+            <p>San Pedro – SPedro CLL MS</p>
+            <span class="ir-icono" data-bs-toggle="modal" data-bs-target="#modalSanMartin">➡️</span>
         </div>
     </div>
 </div>
+
+<!-- Modal Vargas Machuca -->
+<div class="modal fade" id="modalVargasMachuca" tabindex="-1" aria-labelledby="modalLabelVargasMachuca" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabelVargasMachuca">Av. Vargas Machuca 340</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.213746018266!2d-76.97651902406561!3d-12.165846188080275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b951df39ffb3%3A0x737404783de8d26d!2sTienda%20Mass%20Vargas%20Machuca!5e0!3m2!1ses-419!2spe!4v1752038688669!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Justo Naveda -->
+<div class="modal fade" id="modalJustoNaveda" tabindex="-1" aria-labelledby="modalLabelJustoNaveda" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabelJustoNaveda">Jr. Justo Naveda 1190</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.3735585212644!2d-76.97627781466365!3d-12.154951357382306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b9967b7679e5%3A0x1e43a0edb97af270!2sTienda%20Mass!5e0!3m2!1ses-419!2spe!4v1752038781126!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Las Gaviotas -->
+<div class="modal fade" id="modalLasGaviotas" tabindex="-1" aria-labelledby="modalLabelLasGaviotas" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabelLasGaviotas">Jr. Las Gaviotas</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.2481383155364!2d-76.99858642406558!3d-12.163502388082541!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b9a7da8e8bd1%3A0xc9695882b01fdacc!2sTienda%20Mass%20Las%20Gaviota%2016!5e0!3m2!1ses-419!2spe!4v1752038803237!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Guardia Civil -->
+<div class="modal fade" id="modalGuardiaCivil" tabindex="-1" aria-labelledby="modalLabelGuardiaCivil" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabelGuardiaCivil">Jr. Guardia Civil Norte</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7800.176489482978!2d-77.00124675495634!3d-12.1743952022899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b836c4d34d3f%3A0x112acc740b7829ca!2sTienda%20Mass!5e0!3m2!1ses-419!2spe!4v1752038843469!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal 13 de Octubre -->
+<div class="modal fade" id="modal13Octubre" tabindex="-1" aria-labelledby="modalLabel13Octubre" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel13Octubre">PJ. 13 de Octubre</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.0857929431313!2d-76.97185271466189!3d-12.174562157317744!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b9aafef3a353%3A0x20ed34e7d87206e2!2sTienda%20Mass!5e0!3m2!1ses-419!2spe!4v1752038866532!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal César Canevaro -->
+<div class="modal fade" id="modalCesarCanevaro" tabindex="-1" aria-labelledby="modalLabelCesarCanevaro" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabelCesarCanevaro">Av. Prol. César Canevaro</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d124802.75112000774!2d-77.05167876878184!3d-12.174549930465728!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b9f6d310fefb%3A0xb8b2688b7362321b!2sTienda%20Mass!5e0!3m2!1ses-419!2spe!4v1752038918336!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Panamericana Sur -->
+<div class="modal fade" id="modalPanamericanaSur" tabindex="-1" aria-labelledby="modalLabelPanamericanaSur" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabelPanamericanaSur">Av. Antigua Panamericana Sur</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.567385842847!2d-76.87171572406422!3d-12.277528487977719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105bd1f09920adf%3A0x444827a1f8f2127f!2sTienda%20Mass%20Lur%C3%ADn!5e0!3m2!1ses-419!2spe!4v1752039082957!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Los Próceres -->
+<div class="modal fade" id="modalLosProceres" tabindex="-1" aria-labelledby="modalLabelLosProceres" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabelLosProceres">Av. Los Próceres</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.3127159182964!2d-76.99112742406567!3d-12.159100288086625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105b8388aeca8d5%3A0x66ff2d22b08f87c5!2sTienda%20Mass!5e0!3m2!1ses-419!2spe!4v1752038986143!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal San Martín -->
+<div class="modal fade" id="modalSanMartin" tabindex="-1" aria-labelledby="modalLabelSanMartin" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalLabelSanMartin">Av. San Martín</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3869.954607443855!2d-75.73094661448327!3d-14.079856951144182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9110e37537b7597d%3A0x687dd63351cbb765!2sTienda%20Mass!5e0!3m2!1ses-419!2spe!4v1752039676534!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+</div>
+
