--- a/ProyectoDAS/Views/Shared/_Layout.cshtml
+++ b/ProyectoDAS/Views/Shared/_Layout.cshtml
@@ -59,6 +59,10 @@
                             @*<a class="nav-link text-white" href="#">Tiendas</a>*@
                             <a class="nav-link text-white" asp-area="" asp-controller="Tiendas" asp-action="Index">Tiendas</a>
                         </li>
+                        <li class="nav-item fs-5 fw-normal">
+                            @*<a class="nav-link text-white" href="#">Tiendas</a>*@
+                            <a class="nav-link text-white" asp-area="" asp-controller="Historia" asp-action="Index">Historia</a>
+                        </li>
                     </ul>
 
                     @* Formulario de búsqueda centrado-izquierda *@
